# rag-hygiene-scanner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  rules.yaml  third_party_licenses.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  feature_request.yaml
.github/workflows/: ci.yaml  gitleaks.yaml  release-build.yaml
examples/: pii.txt  poison.md  unsafe.html
src/rag_hygiene_scan/: __init__.py  _placeholder.py  cli.py  patterns.py  report.py  scanner.py
tests/: test_cli_end_to_end.py  test_patterns_config.py  test_patterns_html.py  test_patterns_injection.py  test_patterns_pii_secret.py  test_scanner_iter_files.py  test_scanner_path_and_exit.py  test_scanner_scan_text.py  test_severity_helpers.py  test_smoke.py
tools/: add_spdx.py
